--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev":"nodemon src/app.js"
-    
+    "dev": "nodemon src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -15,6 +14,7 @@
   "author": "Dilshad Ahmad",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1"
   }
 }
